--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -30,8 +30,20 @@ jobs:
         uses: actions/checkout@v4
         with:
           repository: NerdBowl/nerd-bowl-vault
-          path: content  # Puts your vault directly into the content folder
+          path: vault-temp # Checkout to a temporary directory
+          token: ${{ secrets.VAULT_PAT }}
           fetch-depth: 0 # Fetches full history (good for 'Last Modified' dates)
+          sparse-checkout: |
+            site
+
+      - name: Setup Content
+        run: |
+          # Create 'content/' directory
+          mkdir -p content
+          # Move files from 'vault-temp/site/' to 'content/'
+          cp -rT vault-temp/site/ content/
+          # Cleanup
+          rm -rf vault-temp
 
       - name: Setup Node
         uses: actions/setup-node@v4
