temp deploy.yml fix

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -32,16 +32,22 @@ jobs:
           repository: NerdBowl/nerd-bowl-vault
           path: vault-temp # Checkout to a temporary directory
           token: ${{ secrets.VAULT_PAT }}
-          fetch-depth: 0 # Fetches full history (good for 'Last Modified' dates)
-          sparse-checkout: |
-            site
+          fetch-depth: 0
+          # CHANGE 1: Removed 'sparse-checkout'. We will fetch the whole repo to ensure we get the files.
 
       - name: Setup Content
         run: |
+          # CHANGE 2: Debugging - List files to verify structure in the logs
+          echo "Listing vault-temp contents:"
+          ls -R vault-temp
+          
           # Create 'content/' directory
           mkdir -p content
-          # Move files from 'vault-temp/site/' to 'content/'
-          cp -rT vault-temp/site/ content/
+          
+          # CHANGE 3: Safer copy command. 
+          # Copies everything INSIDE vault-temp/site/ to content/
+          cp -r vault-temp/site/. content/
+          
           # Cleanup
           rm -rf vault-temp
 
